--- a/src/components/Playlists/Playlists.css
+++ b/src/components/Playlists/Playlists.css
@@ -1,51 +1,51 @@
 @import url(../../index.css);
 
 div.playlists-wrapper {
-    padding: var(--padding-rule-280);
+  padding: var(--padding-rule-280);
 }
 
 div.all-playlists {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    align-items: center;
-    gap: 1em;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-auto-rows: min-content;
+  align-items: center;
+  gap: 1em;
 
-    margin-top: 2em;
+  min-height: 60vh;
+
+  margin-top: 2em;
 }
 
 /* Text Content */
-div.playlists-wrapper h1.title-page, div.playlists-wrapper p.subtitle-page {
-    text-align: center;
-    color: var(--white);
+div.playlists-wrapper h1.title-page,
+div.playlists-wrapper p.subtitle-page {
+  text-align: center;
+  color: var(--white);
 }
 
 @media all and (min-width: 540px) {
-
-    div.all-playlists {
-        gap: 1.5em;
-        grid-template-columns: repeat(2, 1fr);
-
-    }
-
+  div.all-playlists {
+    gap: 1.5em;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 @media all and (min-width: 768px) {
-    div.playlists-wrapper {
-        padding: var(--padding-rule-768);
-        margin-top: 3em;
-        margin-left: var(--space-sidebar-768);
-        width: var(--width-rightside-768);
-
-    }
+  div.playlists-wrapper {
+    padding: var(--padding-rule-768);
+    margin-top: 3em;
+    margin-left: var(--space-sidebar-768);
+    width: var(--width-rightside-768);
+  }
 }
 
 @media all and (min-width: 1024px) {
-    div.playlists-wrapper {
-        width: var(--width-rightside-1024);
-        margin-left: var(--space-sidebar-1024);
-    }
+  div.playlists-wrapper {
+    width: var(--width-rightside-1024);
+    margin-left: var(--space-sidebar-1024);
+  }
 
-    div.all-playlists {
-        grid-template-columns: repeat(3, 1fr);
-    }
+  div.all-playlists {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
